# covid19geomodeller

./: .gitignore  .readthedocs.yaml  Dockerfile  Dockerfile.lite  LICENSE  MANIFEST.in  README.md  install.sh  requirements.lite.txt  requirements.txt  setup.cfg  setup.py  setup2.py  setup_wbackend.py
DataFit/: .ipynb  05_Valparaiso_SEIRHVD5.ipynb  09_Araucania_SEIRHVD5.ipynb  12_Magallanes_SEIRHVD5.ipynb  13_Metropolitana_SEIRHVD5.ipynb  14_LosRios_SEIRHVD5.ipynb  Beta_Rt_UK_Chile.ipynb  COVID19 Data Analysis.ipynb  Calculo_Muertes_por_VMI.ipynb  Chile_26_Mayo.ipynb  Chile_Abril-15-alphafit.ipynb  Chile_Abril-26-dp3_Infected.ipynb  Chile_Abril-26-dp3_UCI.ipynb  Chile_Abril_v1-alphafit.ipynb  Chile_Abril_v1.ipynb  Chile_Enero_CepaUK.ipynb  Chile_Enero_v2.ipynb  Chile_Enero_v3.ipynb  Chile_Marzo_v1.ipynb  DataFit_PuntaArenas.ipynb  DataFit_study.ipynb  Delta_14-07.ipynb  RM_26_Mayo-Copy1.ipynb  RM_26_Mayo.ipynb  RM_4_Mayo.ipynb  RM_Dic.ipynb  SEIRHVD5_DataFit_SeroPrevDynamics.ipynb  SEIRHVD5_Datafit_SPDynamics_Parallel.ipynb  SEIRHVD5_PuntaArenas_Datafit.ipynb  SEIRHVD_DataFit-MultiScenario.ipynb  SEIRHVD_DataFit-tv.ipynb  SEIRHVD_DataFit.ipynb  SEIRHVD_DataFit_SeroPrev.ipynb  ValparaisoFit.py
Examples/: CV19GMData.ipynb  CV19MULTISIM.ipynb  CV19Mobility.ipynb  CV19SIM.ipynb  CreatingDataManager.ipynb  Examples.md  Pandasgui_test.ipynb  Quarantine_SeroPrev_Dynamics.ipynb  Quarantines and SeroPrevalence Dynamics.ipynb  RBM.ipynb  SEIR Optimization.ipynb  SEIR.ipynb  SEIRHVD.ipynb  SEIRHVD_ABM.ipynb  SEIRHVD_CFR.ipynb  SEIRHVD_advancedstudies.ipynb  SEIRHVD_basic.ipynb  (+12 more)
(+321 files in other folders)
